--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.0.5
 Flask-Testing==0.8.1
 Flask-WTF==1.1.1
+gunicorn==21.2.0
 greenlet==3.0.3
 idna==3.6
 importlib-metadata==6.7.0
@@ -20,7 +21,6 @@ importlib-resources==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.2.4
-MarkupSafe==2.1.5
 packaging==23.2
 psycopg2-binary==2.9.9
 requests==2.31.0
