--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.0.5
 Flask-Testing==0.8.1
 Flask-WTF==1.1.1
+Flask-DebugToolbar==0.14.1
 gunicorn==21.2.0
 greenlet==3.0.3
 idna==3.6
